@@ -37,7 +37,7 @@
       },
       "runtime" : {
          "requires" : {
-            "Mojo::UserAgent" : "6.36",
+            "Mojolicious" : "6.36",
             "XML::Simple" : "0",
             "perl" : "5.008005"
          }
@@ -61,7 +61,7 @@
          "web" : "https://github.com/binary-com/perl-WebService-MyAffiliates"
       }
    },
-   "version" : "0.06",
+   "version" : "0.07",
    "x_contributors" : [
       "Fayland Lam <fayland@gmail.com>",
       "Jean-Yves Sireau <jy@binary.com>",
