@@ -1,7 +1,7 @@
 requires 'perl', '5.008005';
 
 requires 'XML::Simple';
-requires 'Mojo::UserAgent', '6.36';
+requires 'Mojolicious', '6.36';
 
 on test => sub {
     requires 'Test::More', '0.96';
